// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Employer dashboard renders Sort section when feature flags are enabled 1`] = `
<Dropdown
  choices={
    Array [
      Object {
        "label": "Newest applications",
        "value": "created_at,descending",
      },
      Object {
        "label": "Oldest applications",
        "value": "created_at,ascending",
      },
      Object {
        "label": "Last name – A to Z",
        "value": "employee,ascending",
      },
      Object {
        "label": "Last name – Z to A",
        "value": "employee,descending",
      },
    ]
  }
  formGroupClassName="display-flex margin-0 flex-align-center"
  hideEmptyChoice={true}
  label="Sort"
  labelClassName="text-bold margin-right-1"
  name="orderAndDirection"
  onChange={[Function]}
  selectClassName="margin-0"
  smallLabel={true}
  value=""
/>
`;

exports[`Employer dashboard renders a 'no results' message in the table, and no pagination components when no claims are present 1`] = `
<tr>
  <td
    colSpan={5}
  >
    No applications on file
  </td>
</tr>
`;

exports[`Employer dashboard renders a beta info alert if all employers are registered in FINEOS 2`] = `
Array [
  "Our dashboard is in beta. You can now see all the applications you need to review using our new dashboard. Over the next few months, we'll be adding more features to the dashboard so you can easily find and manage paid leave applications. You can ",
  <a
    href="https://www.mass.gov/paidleave-employer-feedback"
    key="1"
    rel="noopener"
    target="_blank"
  >
    use our feedback form
  </a>,
  " to tell us what you think of our new features.",
]
`;

exports[`Employer dashboard renders a table of claims with links if employer is registered in FINEOS 1`] = `
<tr
  key="NTN-111-ABS-01"
>
  <th
    data-label="Employee name"
    data-test="employee_name"
    scope="row"
  >
    <Link
      href="/employers/applications/new-application?absence_id=NTN-111-ABS-01"
    >
      <a>
        Jane Doe
      </a>
    </Link>
  </th>
  <td
    data-label="Application ID"
    key="fineos_absence_id"
  >
    <Link
      href="/employers/applications/new-application?absence_id=NTN-111-ABS-01"
    >
      <a>
        NTN-111-ABS-01
      </a>
    </Link>
  </td>
  <td
    data-label="Organization"
    key="employer_dba"
  >
    Work Inc
  </td>
  <td
    data-label="Employer ID number"
    key="employer_fein"
  >
    12-3456789
  </td>
  <td
    data-label="Application start date"
    key="created_at"
  >
    1/15/2021
  </td>
  <td
    data-label="Status"
    key="status"
  >
    <AbsenceCaseStatusTag
      managedRequirements={null}
      status="Approved"
    />
  </td>
</tr>
`;

exports[`Employer dashboard renders a table of claims with links if employer is registered in FINEOS 2`] = `
<thead>
  <tr>
    <th
      key="employee_name"
      scope="col"
    >
      Employee name
    </th>
    <th
      key="fineos_absence_id"
      scope="col"
    >
      Application ID
    </th>
    <th
      key="employer_dba"
      scope="col"
    >
      Organization
    </th>
    <th
      key="employer_fein"
      scope="col"
    >
      Employer ID number
    </th>
    <th
      key="created_at"
      scope="col"
    >
      Application start date
      <TooltipIcon
        position="bottom"
      >
        When an employee started a new leave application
      </TooltipIcon>
    </th>
    <th
      key="status"
      scope="col"
    >
      Status
    </th>
  </tr>
</thead>
`;

exports[`Employer dashboard renders an alert about claim availability when some employers aren't registered in FINEOS yet 2`] = `
Array [
  "Your account has been verified. It may take up to 15 minutes for our systems to update so that you can log in and review applications. If anyone else on your team needs to review applications, they’ll also need to complete the ",
  <a
    href="https://www.mass.gov/how-to/creating-an-employer-account-to-review-paid-family-and-medical-leave-pfml-applications"
    key="1"
    rel="noopener"
    target="_blank"
  >
    verification process
  </a>,
  ".",
]
`;

exports[`Employer dashboard renders filters 1`] = `
<Fragment>
  <div
    className="margin-bottom-2"
  >
    <Button
      aria-controls="filters"
      aria-expanded="false"
      onClick={[Function]}
      variation="outline"
    >
      Show filters
    </Button>
  </div>
  <form
    className="bg-primary-lighter padding-x-3 padding-top-1px padding-bottom-3 usa-form maxw-none"
    hidden={true}
    id="filters"
    onSubmit={[Function]}
  >
    <InputChoiceGroup
      choices={
        Array [
          Object {
            "checked": false,
            "className": "bg-transparent",
            "label": "Approved",
            "value": "Approved",
          },
          Object {
            "checked": false,
            "className": "bg-transparent",
            "label": "Closed",
            "value": "Closed",
          },
          Object {
            "checked": false,
            "className": "bg-transparent",
            "label": "Denied",
            "value": "Declined",
          },
          Object {
            "checked": false,
            "className": "bg-transparent",
            "label": "--",
            "value": "Pending",
          },
        ]
      }
      label="Status"
      name="claim_status"
      onChange={[Function]}
      smallLabel={true}
      type="checkbox"
      value=""
    />
    <Dropdown
      autocomplete={true}
      choices={
        Array [
          Object {
            "label": "Work Inc (11-3456789)",
            "value": "mock-id-1",
          },
          Object {
            "label": "Acme (22-3456789)",
            "value": "mock-id-2",
          },
        ]
      }
      label="Organizations"
      name="employer_id"
      onChange={[Function]}
      smallLabel={true}
      value=""
    />
    <Button
      disabled={true}
      type="submit"
    >
      Apply filters
    </Button>
  </form>
</Fragment>
`;

exports[`Employer dashboard renders filters toggle button with expected label and aria attributes 1`] = `
<Button
  aria-controls="filters"
  aria-expanded="false"
  onClick={[Function]}
  variation="outline"
>
  Show filters (2)
</Button>
`;

exports[`Employer dashboard renders filters toggle button with expected label and aria attributes 2`] = `
<Button
  aria-controls="filters"
  aria-expanded="false"
  onClick={[Function]}
  variation="outline"
>
  Show filters
</Button>
`;

exports[`Employer dashboard renders filters toggle button with expected label and aria attributes 3`] = `
<Button
  aria-controls="filters"
  aria-expanded="true"
  onClick={[Function]}
  variation="outline"
>
  Hide filters
</Button>
`;

exports[`Employer dashboard renders instructions if there are no verified employers 1`] = `
Array [
  "You have not verified any organizations. ",
  <a
    href="/employers/organizations"
    key="1"
  >
    Complete this process
  </a>,
  " to review applications.",
]
`;

exports[`Employer dashboard renders search section when feature flags are enabled 1`] = `
<div
  className="bg-base-lightest padding-x-3 padding-top-1px padding-bottom-2"
>
  <form
    className="usa-form grid-row"
    onSubmit={[Function]}
  >
    <div
      className="grid-col-fill tablet:grid-col-auto"
    >
      <InputText
        label="Search for employee name or application ID"
        name="search"
        onChange={[Function]}
        smallLabel={true}
        value="Initial search field value"
      />
    </div>
    <div
      className="grid-col-auto flex-align-self-end"
    >
      <Button
        className="width-auto"
        type="submit"
      >
        Search
      </Button>
    </div>
  </form>
</div>
`;

exports[`Employer dashboard renders status descriptions with review by when feature flags are enabled 1`] = `
Array [
  <strong
    key="strong-0"
  >
    Review by:
  </strong>,
  " Review this application by this date to provide DFML with your input.",
]
`;

exports[`Employer dashboard renders status descriptions with review by when feature flags are enabled 2`] = `
Array [
  <strong
    key="strong-0"
  >
    No action required:
  </strong>,
  " This leave request is awaiting a decision from DFML.",
]
`;

exports[`Employer dashboard renders status descriptions with review by when feature flags are enabled 3`] = `
Array [
  <strong
    key="strong-0"
  >
    Denied:
  </strong>,
  " DFML has denied this leave request.",
]
`;

exports[`Employer dashboard renders status descriptions with review by when feature flags are enabled 4`] = `
Array [
  <strong
    key="strong-0"
  >
    Approved:
  </strong>,
  " DFML has approved this leave request.",
]
`;

exports[`Employer dashboard renders status descriptions with review by when feature flags are enabled 5`] = `
Array [
  <strong
    key="strong-0"
  >
    Closed:
  </strong>,
  " The leave has passed or no action can be taken.",
]
`;

exports[`Employer dashboard renders the page with expected content and pagination components 1`] = `
<Title>
  Dashboard
</Title>
`;

exports[`Employer dashboard renders the page with expected content and pagination components 2`] = `
<p
  className="margin-y-2"
>
  Applications will not have a status until the Department has made a decision. Applications that don't have a status may require action from you.
</p>
`;

exports[`Employer dashboard renders the page with expected content and pagination components 3`] = `
Array [
  <strong
    key="strong-0"
  >
    “--” or no status:
  </strong>,
  " This leave request may require action from you; otherwise, it is awaiting a decision from DFML.",
]
`;

exports[`Employer dashboard renders the page with expected content and pagination components 4`] = `
Array [
  <strong
    key="strong-0"
  >
    Approved:
  </strong>,
  " DFML has approved this leave request.",
]
`;

exports[`Employer dashboard renders the page with expected content and pagination components 5`] = `
Array [
  <strong
    key="strong-0"
  >
    Closed:
  </strong>,
  " The leave has passed or no action can be taken.",
]
`;

exports[`Employer dashboard renders the page with expected content and pagination components 6`] = `
Array [
  <strong
    key="strong-0"
  >
    Denied:
  </strong>,
  " DFML has denied this leave request.",
]
`;

exports[`Employer dashboard renders the page with expected content and pagination components 7`] = `
Array [
  "You have not verified any organizations. ",
  <a
    href="/employers/organizations"
    key="1"
  >
    Complete this process
  </a>,
  " to review applications.",
]
`;

exports[`Employer dashboard renders the page with expected content and pagination components 8`] = `
<Details
  label="Status descriptions"
>
  <ul
    className="usa-list"
  >
    <li>
      <Trans
        i18nKey="pages.employersDashboard.statusDescription_none"
      />
    </li>
    <li>
      <Trans
        i18nKey="pages.employersDashboard.statusDescription_approved"
      />
    </li>
    <li>
      <Trans
        i18nKey="pages.employersDashboard.statusDescription_closed"
      />
    </li>
    <li>
      <Trans
        i18nKey="pages.employersDashboard.statusDescription_denied"
      />
    </li>
  </ul>
</Details>
`;

exports[`Employer dashboard renders the page with expected content and pagination components 9`] = `
<PaginationSummary
  pageOffset={1}
  pageSize={25}
  totalRecords={75}
/>
`;

exports[`Employer dashboard renders the page with expected content and pagination components 10`] = `
<PaginationNavigation
  onClick={[Function]}
  pageOffset={1}
  totalPages={3}
/>
`;

exports[`Employer dashboard shows buttons for removing active filters 1`] = `
<div
  className="margin-top-1 margin-bottom-4"
  data-test="filters-menu"
>
  <strong
    className="margin-right-2 display-inline-block"
  >
    Filters:
  </strong>
  <FilterMenuButton
    data-test="employer_id"
    onClick={[Function]}
  >
    Acme Co
  </FilterMenuButton>
  <FilterMenuButton
    data-test="claim_status_Approved"
    key="Approved"
    onClick={[Function]}
  >
    Approved
  </FilterMenuButton>
  <FilterMenuButton
    data-test="claim_status_Closed"
    key="Closed"
    onClick={[Function]}
  >
    Closed
  </FilterMenuButton>
</div>
`;
